Fix private